Fixed alignments in Events component

--- a/client/src/components/events/events.styl
+++ b/client/src/components/events/events.styl
@@ -3,7 +3,8 @@
 .Events
   color: $black
   font-family: 'Lato';
-
+  max-width: 80%;
+  margin: 0 auto;
 
   h2
     margin: 0
@@ -38,14 +39,13 @@
       padding-right: 5px;
 
   .Event
-    width: 720px;
+    max-width: 720px;
     margin: 0 auto;
     background: rgba(255,255,255,0.25);
 
     .Event-eventheader
       position: relative;
       min-height: 250px;
-      width: 720px;
 
       .Eventheader-text
         margin: 0;
@@ -56,6 +56,7 @@
         align-items: center;
         position: absolute;
         width: 100%;
+        color: $white;
 
         .Eventheader-info
           border: 2px solid $white;
